[tool.poetry]
name = "ymltree"
version = "0.0.2"
# authors = ["sasano8 <y-sasahara@ys-method.com>"]
authors = ["sasano8"]
description = "This is a sample package for publish to test pypi"
readme = "README.md"
license = "MIT"
# homepage = "https://github.com/MattiooFR/package_name"
# repository = "https://github.com/MattiooFR/package_name"
include = [
  "LICENSE"
]

[tool.poetry.scripts]
dockerfm = 'ymltree.main:app'

[tool.poetry.dependencies]
# Python3.6 required for typer.
python = "^3.6"
typer = "^0.2.1"
pyyaml = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.9.0"
black = "^19.10b0"
isort = "^4.3.21"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"

[tool.coverage.run] 
source = ["ymltree"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude_lines = 'if __name__ == .__main__.:'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

# [tool.coverage] 


